--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "standard": "^14.3.4"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jonathan Rayback",
